; ModuleID = '/home/carl/AnghaBench/linux/sound/core/extr_pcm_native.c_snd_pcm_group_init.c'
source_filename = "/home/carl/AnghaBench/linux/sound/core/extr_pcm_native.c_snd_pcm_group_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_group = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_pcm_group_init(%struct.snd_pcm_group* %0) #0 {
  %2 = alloca %struct.snd_pcm_group*, align 8
  store %struct.snd_pcm_group* %0, %struct.snd_pcm_group** %2, align 8
  %3 = load %struct.snd_pcm_group*, %struct.snd_pcm_group** %2, align 8
  %4 = getelementptr inbounds %struct.snd_pcm_group, %struct.snd_pcm_group* %3, i32 0, i32 3
  %5 = call i32 @spin_lock_init(i32* %4)
  %6 = load %struct.snd_pcm_group*, %struct.snd_pcm_group** %2, align 8
  %7 = getelementptr inbounds %struct.snd_pcm_group, %struct.snd_pcm_group* %6, i32 0, i32 2
  %8 = call i32 @mutex_init(i32* %7)
  %9 = load %struct.snd_pcm_group*, %struct.snd_pcm_group** %2, align 8
  %10 = getelementptr inbounds %struct.snd_pcm_group, %struct.snd_pcm_group* %9, i32 0, i32 1
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  %12 = load %struct.snd_pcm_group*, %struct.snd_pcm_group** %2, align 8
  %13 = getelementptr inbounds %struct.snd_pcm_group, %struct.snd_pcm_group* %12, i32 0, i32 0
  %14 = call i32 @refcount_set(i32* %13, i32 1)
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @refcount_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
